--- a/pages/index.css
+++ b/pages/index.css
@@ -5,17 +5,6 @@
 @import url("../blocks/lead.css");
 @import url("../blocks/intro.css");
 @import url("../blocks/footer.css");
+@import url("../blocks/site.css");
+@import url("../blocks/page.css");
 
-.site {
-  background-color: #2a2c2f;
-  color: #fff;
-  font-family: "Inter", Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  margin: 0;
-}
-
-.page {
-  max-width: 1280px;
-  margin: 0 auto;
-}
