--- a/pages/index.css
+++ b/pages/index.css
@@ -7,4 +7,5 @@
 @import url("../blocks/footer.css");
 @import url("../blocks/site.css");
 @import url("../blocks/page.css");
+@import url("../blocks/header.css");
 
